--- a/app/src/main/res/layout/activity_one.xml
+++ b/app/src/main/res/layout/activity_one.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="zhou.com.view.MainActivity">
+    tools:context="zhou.com.view.activity.OneActivity">
 
-    <Button
-        android:id="@+id/bt1"
+    <zhou.com.view.view.PieView
+        android:id="@+id/pieView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="饼状图" />
-
-
+        android:layout_height="wrap_content" />
 </LinearLayout>
