--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,6 @@
         android:text="勾选样式" />
 
     <Button
-<<<<<<< HEAD
         android:id="@+id/bt4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,14 +32,21 @@
         android:textAllCaps="false" />
 
     <Button
-        android:id="@+id/bt5"
-        android:text="上面圆下面直"
-=======
-        android:id="@+id/bt5"
-        android:textAllCaps="false"
-        android:text="LeftLoad"
->>>>>>> 02618b8eff8e077676350b283c8aba7abee3786a
+        android:id="@+id/bt6"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="上面圆下面直" />
 
+    <Button
+        android:id="@+id/bt5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="LeftLoad"
+        android:textAllCaps="false" />
+
+    <Button
+        android:id="@+id/bt7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="雷达" />
 </LinearLayout>
